--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,30 +1,41 @@
 /* Octopus Energy brand colours used in the design */
 :root {
-  --hemocyanin: #180048;
-  --ice: #f0ffff;
-  --plum: #600e6b;
-  --purpleHaze: #a49fc8;
-  --siphon: #100030;
-  --sohoLights: #f050f8;
+    --hemocyanin: #180048;
+    --ice: #f0ffff;
+    --plum: #600e6b;
+    --purpleHaze: #a49fc8;
+    --siphon: #100030;
+    --sohoLights: #f050f8;
 }
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: Gotham, helvetica, arial, sans-serif;
-  color: var(--ice);
+    padding: 0;
+    margin: 0;
+    font-family: Gotham, helvetica, arial, sans-serif;
+    color: var(--ice);
 }
 
 body {
-  background: var(--siphon);
+    background-color: #000;
 }
 
 .home {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0 auto;
+}
+
+img {
+    width: 100%;
+}
+
+h1,
+h2,
+h3 {
+    margin: 0;
+    padding: 0;
 }
