feat: add footer, loader and error

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -14,6 +14,10 @@ body {
     margin: 0;
     font-family: Gotham, helvetica, arial, sans-serif;
     color: var(--ice);
+    min-height: 100vh;
+    /* FOR DEMO PURPOSES ONLY */
+    width: 500px;
+    margin: auto;
 }
 
 body {
