--- a/client/pages/product/product.module.scss
+++ b/client/pages/product/product.module.scss
@@ -1,6 +1,4 @@
 .container {
-  min-height: 100vh;
-  width: 500px;
   background-color:  var(--siphon);
   margin: 0 auto;
   overflow: hidden;
@@ -68,4 +66,20 @@
       margin-bottom: 30px;
     }
   }
+}
+
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: red;
 }
