--- a/client/components/navbar/navbar.module.scss
+++ b/client/components/navbar/navbar.module.scss
@@ -12,4 +12,22 @@
     display: inline-block;
     margin-left: auto;
     cursor: pointer;
+    position: relative;
+}
+
+.count {
+    position: absolute;
+    bottom: -5px;
+    left: -5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+    background-color: var(--sohoLights);
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 14px;
+
 }
