testing: add testing

--- a/client/components/quantityButton/quantityButton.module.scss
+++ b/client/components/quantityButton/quantityButton.module.scss
@@ -6,7 +6,7 @@
     font-weight: normal;
 }
 
-.title {
+.quantity {
     font-size: 18px;
     font-weight: normal;
     text-align: center;
@@ -16,4 +16,11 @@
 
 .disabled {
     opacity: 0.5;
+}
+
+.title {
+    font-size: 14px;
+    margin-bottom: 6px;
+    font-weight: normal;
+    text-align: center;
 }
